<resources>
    <string name="app_name">iVolunteam</string>
    <string name="title_activity_nav_bar">Volunteam</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add_activity">Add Activity</string>
    <string name="add_activity_icon">Icon</string>
    <string name="fname_activity">First Name of Organiser</string>
    <string name="lname_organizer">Last Name of Organiser</string>
    <string name="activity">Volunteer Activity</string>
    <string name="activity_desc">Activity Description</string>
    <string name="location">Location</string>
    <string name="location_pick">Pick Location</string>
    <string name="date_pick">Pick Date</string>
    <string name="time_pick">Pick Time</string>
    <string name="Submit_Activity">Submit</string>


    <string name="action_settings">Settings</string>
    <string name="randomText">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>

    <string name="google_place_api">AIzaSyDofS-JU3TWQjbXyHxg9vHC8hvkyPjsEJo</string>
</resources>
