<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lengwe.iVolunteer.ActivityAdd"
    android:orientation="vertical">
    <!--android:background="@drawable/shore"-->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        android:fillViewport="true">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/add_activity"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/add_activity_image_id"
            android:layout_width="76dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/add_activity_icon"
            android:onClick="add_image_btn"
            android:src="@drawable/activity_ico" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_activity_name_parent_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_activity_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_activity_Volunteam_firstName_parent_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_activity_Volunteam_firstName_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fname_activity"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_activity_Volunteam_sirName_parent_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_activity_Volunteam_sirName_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lname_organizer"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_activity_description_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/activity_desc"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_activity_location_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/location"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/getPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rectagle_button"
            android:onClick="getPlace"
            android:text="@string/location_pick"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/pick_date_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rectagle_button"
            android:onClick="datePicker"
            android:text="@string/date_pick"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/pick_time_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rectagle_button"
            android:onClick="timePicker"
            android:text="@string/time_pick"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/submit_activity_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/submit_btn"
            android:onClick="add_submit_activity"
            android:text="@string/Submit_Activity"
            android:textAllCaps="false"
            android:textColor="@color/transparent" />

    </LinearLayout>

    </ScrollView>


</FrameLayout>
